oxiplate-derive/tests/broken/derive/include-failed-expand.stderr
error: Path does not exist: `$DIR/templates/path/that/does/not/exist`
 --> tests/broken/derive/include-failed-expand.rs:4:22
  |
4 | #[oxiplate_include = "path/that/does/not/exist"]
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: `Data` doesn't implement `std::fmt::Display`
 --> tests/broken/derive/include-failed-expand.rs:8:18
  |
8 |     print!("{}", Data);
  |             --   ^^^^ `Data` cannot be formatted with the default formatter
  |             |
  |             required by this formatting parameter
  |
  = help: the trait `std::fmt::Display` is not implemented for `Data`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `$crate::format_args` which comes from the expansion of the macro `print` (in Nightly builds, run with -Z macro-backtrace for more info)
